--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,15 @@
 						</execution>
 					</executions>
 				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.16</version>
+					<configuration>
+						<reuseForks>false</reuseForks>
+						<forkCount>1</forkCount>
+					</configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 
