--- a/pom.xml
+++ b/pom.xml
@@ -75,10 +75,20 @@
 						</execution>
 					</executions>
 				</plugin>
-	
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>2.4</version>
+					<configuration>
+						<archive>
+							<manifest>
+								<mainClass>skaro.pokeaimpi.PokeAimPI</mainClass>
+							</manifest>
+						</archive>
+					</configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
-
 	</build>
 
 </project>
