--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-rest</artifactId>
+        </dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
@@ -58,7 +62,7 @@
 		</dependency>
 		<dependency>
 			<groupId>skaro.pokeaimpi</groupId>
-			<artifactId>PokeAimPI-SDK</artifactId>
+			<artifactId>pokeaimpi-sdk</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
